syntax = "proto3";

option csharp_namespace = "ProjectWarrantlyRecordGrpcServer.Protos";

import "google/api/annotations.proto";

package CustomerManagement;

service CustomerManagement{

	//ReadSingle
	rpc ReadCustomerManagement(ReadCustomerRequest) returns (ReadCustomerManagementResponse){// chỉ cần điền localhot+ chuỗi này
		option (google.api.http) = {
				get: "/api/CustomerManagement/ReadCustomerManagement/{IdStaff}/{IdCusomer}"
		};
	}

	//Readlist
	rpc ListCustomerManagement(GetListCustomerManagementRequest) returns (GetListCustomerManagementResponse){
		option (google.api.http) = {
				get: "/api/CustomerManagement/ListCustomerManagement/{IdStaff}"
		};
	}

}

message GetListCustomerManagementRequest
{
	int32 IdStaff = 1;
}

message GetItemInListCustomerResponse{
	int32 IdCusomer = 1;
	string CustomerName = 2;
	string CustomerEmail = 3;
	string CustomerPhone = 4;
	string CustomerAdrress = 5;
}

message GetListCustomerManagementResponse{
	repeated GetItemInListCustomerResponse toCustomerList = 1;
}

message ReadCustomerRequest{
	int32 IdCusomer = 1;
	int32 IdStaff = 2;
}

message ReadItemDeviceCustomerManagementResponse
{
	int32 IdCusomer = 1;
	string CustomerName = 2;
	string CustomerEmail = 3;
	string CustomerPhone = 4;
	string CustomerAdrress = 5;
	string CustomerDevice = 6;
	int32 IdWarrantReport = 7;
	string DateOfWarrant = 8;
	string TimeEnd = 9;
	int32 IdDevice = 10;
}

message ReadCustomerManagementResponse{
	repeated ReadItemDeviceCustomerManagementResponse toDeviceList = 1;
}

